<resources>
    <string name="app_name">EkipaApp</string>
    <string name="location_name">Location name</string>
    <string name="add_me">Add me!</string>
    <string name="url">URL</string>
    <string name="per_person_cost">Per person cost</string>
    <string name="edit_confirm">Confirm edit</string>
    <string name="edit_location">Edit</string>
    <string name="remove">Remove</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="confirm_registration">Confirm registration</string>
    <string name="logout">Logout</string>
    <string name="add_location">Add location</string>
    <string name="events">Events</string>
    <string name="add_event">Add event</string>
    <string name="confirm_adding_event">Confirm adding event</string>
    <string name="event_name">Event name</string>
    <string name="vote">Vote</string>
    <string name="menu">Menu</string>
    <string name="loginLabel">Login</string>
    <string name="registrationLabel">Registration</string>
</resources>
