<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newEmailEditTextWrapper"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toStartOf="@id/registrationEndGuideline"
        app:layout_constraintStart_toEndOf="@id/registrationStartGuideline"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newPasswordEditTextWrapper"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@id/registrationEndGuideline"
        app:layout_constraintStart_toEndOf="@id/registrationStartGuideline"
        app:layout_constraintTop_toBottomOf="@id/newEmailEditTextWrapper">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registerConfirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_registration"
        app:layout_constraintEnd_toStartOf="@id/registrationEndGuideline"
        app:layout_constraintStart_toEndOf="@id/registrationStartGuideline"
        app:layout_constraintTop_toBottomOf="@id/newPasswordEditTextWrapper" android:layout_marginTop="32dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/registrationStartGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/registrationEndGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />

    <FrameLayout
        android:id="@+id/registeringSpinner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#40000000"
        android:visibility="gone"
        android:clickable="true"
        tools:ignore="KeyboardInaccessibleWidget">

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>